--- a/ibs_style.css
+++ b/ibs_style.css
@@ -14,13 +14,59 @@ nav{
 	position: absolute;
 	left: 0;
 	margin-top:52px;
-	padding-left: 20px;
 	width: 100%;
 	background-color: #95c8d8;
 
 }
-a{
+.nav_items a{
 	text-decoration:none;
+	color: white;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+.nav_items a:hover{
+	background-color: white;
+	color: #95c8d8;
+}
+.dropdown_button{
+	background-color:#95c8d8;
+	color: white;
+	padding-right: 15px;
+	padding-left: 15px;
+	border:none; 
+}
+.dropdown{
+	position: relative;
+	display: inline-block;
+}
+.dropdown_menu{
+	display: none;
+	position: absolute;
+	background-color: white;
+	min-width: 150px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
+}
+.dropdown_menu a{
+	color:#95c8d8;
+	padding: 15px 15px;
+	text-decoration: none;
+	display: block;
+}
+.dropdown_button:hover{
+background-color: white;
+color: #95c8d8;
+
+}
+.dropdown:hover .dropdown_menu{
+	display: block;
+}
+.dropdown:hover .dropdown_button{
+	background-color: white;
+	color: #95c8d8;
+}
+.dropdown a:hover{
+	background-color: #95c8d8;
 	color: white;
 }
 #search_bar{
@@ -38,7 +84,7 @@ margin-right: 40px;
 margin-top: 4px;
 height: 25px;
 border-radius: 12px;
-border:2px solid #4682b4;
+border:1px solid #4682b4;
 	
 }
 #search_button:hover{
@@ -49,7 +95,7 @@ background-color: #81d8d0;
 	width: 400px;
 	height: 25px;
 	margin-right: 10px;
-	border:2px solid #4682b4;
+	border:1px solid #4682b4;
 }
 footer{
 	position: absolute;
