--- a/ibs_style.css
+++ b/ibs_style.css
@@ -97,6 +97,11 @@ background-color: #81d8d0;
 	margin-right: 10px;
 	border:1px solid #4682b4;
 }
+.banner{
+	margin-top: 120px;
+	display: inline-block;
+	margin-right: 30px;
+}
 footer{
 	position: absolute;
 	left: 0;
