--- a/ibs_style.css
+++ b/ibs_style.css
@@ -140,6 +140,7 @@ margin-top: 4px;
 	margin-right: 30px;
 }
 .sinupform{
+	background-color: #95c8d8;
 	display: inline-block;
 	margin-top: 200px;
 	padding:20px 20px 20px 20px;
