--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ header{
 	background-color: #aeb4b7;
 	
 }
+main{
+	min-height: 100vh;
+}
 .logo{
 	margin-left: 20px;
 }
@@ -23,7 +26,7 @@ top: 15px;
 }
 .log_in{
 	position: absolute;
-	left: 80%;
+	left: 70%;
 	top: 15px;
 	color: white;
 }
@@ -45,4 +48,13 @@ nav .items{
 }
 .log_in a:hover{
 color: black;
+}
+footer{
+	position: absolute;
+	left: 0;
+	width: 100%;
+	background-color: #aeb4b7;
+}
+footer p{
+	margin-left: 20px;
 }
