--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ header{
 	top: 0;
 	left: 0;
 	width: 100%;
+	height: 13%;
 	background-color: #aeb4b7;
 	
 }
@@ -10,11 +11,17 @@ main{
 	min-height: 100vh;
 }
 .logo{
+	position: absolute;
+	left: 8%;
+	top:0;
+}
+.menu_button input{
+	width: 60px;height: 60px;
 	margin-left: 20px;
 }
 .search{
 position: absolute;
-left: 30%;
+left: 34%;
 top: 15px;
 }
 .search input{
@@ -26,8 +33,8 @@ top: 15px;
 }
 .log_in{
 	position: absolute;
-	left: 70%;
-	top: 15px;
+	left: 67%;
+	top: 20px;
 	color: white;
 }
 nav{
@@ -44,17 +51,30 @@ nav .items{
 .log_in a{
 	text-decoration: none;
 	color: white;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-bottom: 5px;
+	border:1px solid white;
 
 }
 .log_in a:hover{
 color: black;
+border-color: black;
 }
 footer{
 	position: absolute;
 	left: 0;
 	width: 100%;
 	background-color: #aeb4b7;
+
 }
 footer p{
 	margin-left: 20px;
+}
+.items p{
+	margin: 0;
+}
+.items p:hover{
+	background-color: #aeb4b7;
+	color: white;
 }
