--- a/style.css
+++ b/style.css
@@ -9,11 +9,20 @@ header{
 	height: 75px;
 	margin: 10px 15px 10px 0;
 }
+#search-btn{
+color: white;
+border-color: black;
+
+}
+
 @media only screen and (max-width: 600px) {
  #logo-img{
  	background: url('bookstore_logo_sm.png');
 	width: 200px;
 	height: 50px;
 	margin: 10px 15px 10px 0;
+
  }
+
 }
+@media only screen and (min-width: 992px) {#Search-form{padding-left: 40px;}}
