--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ color: white;
 border-color: black;
 
 }
-
-@media only screen and (max-width: 600px) {
+#search-btn:hover{background-color: white; color: black;}
+#search-input{box-shadow: none; border-color: black; }
+/* small media query*/
+@media only screen and (max-width: 576px) {
  #logo-img{
  	background: url('bookstore_logo_sm.png');
 	width: 200px;
@@ -25,4 +27,10 @@ border-color: black;
  }
 
 }
+/* large media query*/
 @media only screen and (min-width: 992px) {#Search-form{padding-left: 40px;}}
+/* mediam media query*/
+@media only screen and (min-width: 768px)and (max-width: 991px) 
+{
+
+}
