--- a/style.css
+++ b/style.css
@@ -40,7 +40,10 @@ margin: 10px 15px 10px 0;
 
 }
 /* large media query*/
-@media only screen and (min-width: 992px) {#Search-form{padding-left: 40px; padding-right: 40px;}}
+@media only screen and (min-width: 992px) 
+{
+	
+}
 /* mediam media query*/
 @media only screen and (min-width: 768px)and (max-width: 991px) 
 {
