added shopping bag icon

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ color: white;
 border-color: black;
 
 }
+#shopping-bag-icon{height: 30px;width: 30px;}
 #search-btn:hover{background-color: white; color: black;}
 #search-input{box-shadow: none; border-color: black; }
 #crt-acc
