--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ margin: 10px 15px 10px 0;
  }
 
 }
-/* large media query*/
-@media only screen and (min-width: 992px) 
+
+@media only screen and (max-width: 991px) 
 {
 	
 }
