--- a/style.css
+++ b/style.css
@@ -38,7 +38,9 @@ margin: 10px 15px 10px 0;
 	margin: 10px 15px 10px 0;
 
  }
-
+.display-4{
+	font-size: 2.0rem;
+}
 }
 
 @media only screen and (max-width: 991px) 
