added log in page

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ footer{background-color: #aeb4b7;}
 footer a{text-decoration: none;
 color: white;}
 footer a:hover{text-decoration: none; color: black;}
+#log-in-form a{text-decoration: none; color: black;}
+#log-in-form a:hover{color:#aeb4b7;}
+#log-in-form button{background-color:#aeb4b7; border-color:black; }
+#log-in-form button:hover{background-color:black;  }
+#log-in-form input{box-shadow: none; border-color: black;}
 #logo-img{
 	background: url('bookstore_logo.png')no-repeat;
 	width: 300px;
@@ -22,6 +27,7 @@ border-color: black;
 #shopping-bag-icon{height: 30px;width: 30px;}
 #search-btn:hover{background-color: white; color: black;}
 #search-input{box-shadow: none; border-color: black; }
+
 #crt-acc
 {
 width: 30px;
@@ -29,6 +35,7 @@ height: 30px;
 margin: 10px 15px 10px 0;
 
 }
+
 /* small media query*/
 @media only screen and (max-width: 576px) {
  #logo-img{
@@ -41,6 +48,7 @@ margin: 10px 15px 10px 0;
 .display-4{
 	font-size: 2.0rem;
 }
+#log-in-form{width: 50%}
 }
 
 @media only screen and (max-width: 991px) 
